# SmolGameEngine

./: .gitignore  CMakeLists.txt  README.md
demo/: background.cpp  background.hpp  demo.cpp  demo.hpp  main.cpp  player.cpp  player.hpp  pointlight.cpp  pointlight.hpp
demo/assets/: scene.sce
demo/assets/0trashcan/: README.md
demo/assets/blender/: scene.blend
demo/assets/paths/: lightpath.txt
demo/assets/programs/background/: background.frag  background.vert
demo/assets/programs/bdepth/: bdepth.vert
demo/assets/programs/bmaterial/: bmaterial.frag  bmaterial.vert
demo/assets/programs/bright/: bright.frag  bright.vert
demo/assets/programs/demo/: cubes.frag  cubes.vert  depth.frag  depth.vert  screen.frag  screen.vert  shader.vert  shader_black.frag  shader_bricks.frag  shader_marble.frag  shader_mirror.frag  shader_texture.frag  shader_wood.frag  simple.frag  simple.vert  skybox.frag  skybox.vert
demo/assets/programs/depth/: depth.frag  depth.vert
demo/assets/programs/material/: material.frag  material.vert
include/sge/base/: affine.hpp  bmaterial.hpp  camera.hpp  gameobject.hpp  material.hpp  model.hpp  pointlight.hpp  scene.hpp  sge.hpp  types.hpp  vertex.hpp
include/sge/gl/: draw.hpp  framebuffer.hpp  gl.hpp  program.hpp  texture.hpp  vao.hpp  vbo.hpp  window.hpp
src/base/: affine.cpp  bmaterial.cpp  camera.cpp  gameobject.cpp  material.cpp  model.cpp  pointlight.cpp  scene.cpp
src/gl/: draw.cpp  framebuffer.cpp  program.cpp  texture.cpp  vao.cpp  vbo.cpp  window.cpp
